Implement revoke token for OIDC authentication #449
- add cache and fix race condition
- Claim azp should be optional